definindo as cores do projeto e criando o cabeçalho

--- a/index.html
+++ b/index.html
@@ -3,10 +3,47 @@
 <head>
 	<meta charset="utf-8">
 	<title>Matheus Sousa de Jesus</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+	<header>
+		<div class="cabecalho-principal">
+			<div class="conteiner">
+				<div class="cabecalho-principal-titulo">
+					<h1>Matheus.SJ</h1>
+				</div>
 
-<h1>Ola mundo</h1>
+				<div class="cabecalho-principal-menu">
+					<ul>
+						<li>
+							Sobre
+						</li>
+						<li>
+							Conhecimentos
+						</li>
+						<li>
+							Experiência
+						</li>
+						<li>
+							Formações
+						</li>
+					</ul>
+				</div>
+			</div>
+
+		</div>
+	</header>
+
+	<main>
+		
+		<section class="titulo"><h1>Ola, eu sou o Matheus</h1></section>
+
+
+	</main>
+	<footer>
+		
+	</footer>
 
 </body>
 </html>
