--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Matheus Sousa de Jesus</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
@@ -11,22 +12,22 @@
 		<div class="cabecalho-principal">
 			<div class="conteiner">
 				<div class="cabecalho-principal-titulo">
-					<h1>Matheus.SJ</h1>
+					<h1><a href="#">Matheus.SJ</a></h1>
 				</div>
 
 				<div class="cabecalho-principal-menu">
 					<ul>
 						<li>
-							Sobre
+							<a href="#">Sobre</a>
 						</li>
 						<li>
-							Conhecimentos
+							<a href="#">Conhecimentos</a>
 						</li>
 						<li>
-							Experiência
+							<a href="#">Experiência</a>
 						</li>
 						<li>
-							Formações
+							<a href="#">Formações</a>
 						</li>
 					</ul>
 				</div>
