adicionando imagem pessoal e titulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Matheus Sousa de Jesus</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kulim+Park&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
@@ -38,7 +38,12 @@
 
 	<main>
 		
-		<section class="titulo"><h1>Ola, eu sou o Matheus</h1></section>
+		<section class="apresentacao">
+			<div class="conteiner">
+				<img src="img/foto-pessoal.jpg">
+				<h1 class="apresentacao-titulo">Olá, eu sou o Matheus</h1>
+			</div>
+		</section>
 
 
 	</main>
