--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 							<a href="#">Sobre</a>
 						</li>
 						<li>
-							<a href="#">Conhecimentos</a>
+							<a href="#">Experiência</a>
 						</li>
 						<li>
-							<a href="#">Experiência</a>
+							<a href="#">Conhecimentos</a>
 						</li>
 						<li>
 							<a href="#">Formações</a>
@@ -47,19 +47,22 @@
 			</div>
 		</section>
 
+		<section class="sobre-principal">
+			<div class="conteiner">
+				<img src="img/foto-pessoal.jpg">
+				<h1 class="sobre-titulo">Sobre</h1>
+				<h3>	Lorem ipsum donec libero urna odio sem luctus proin conubia odio, purus ac ut vivamus donec condimentum inceptos scelerisque nunc primis, neque suspendisse etiam arcu ipsum in nullam auctor diam. ultricies egestas aliquet nam a lectus feugiat consectetur nunc molestie scelerisque, gravida curae pharetra vulputate rhoncus elit sagittis magna nisi, inceptos dictum id viverra et adipiscing litora duis egestas. maecenas nulla inceptos habitant purus porta imperdiet aliquet litora, conubia quisque mi sed senectus suscipit libero consequat consectetur, tellus mattis curabitur interdum phasellus mauris vulputate. neque blandit sollicitudin donec malesuada fringilla risus tellus, suspendisse praesent consectetur dapibus imperdiet molestie vehicula, aliquam purus aenean primis praesent scelerisque. 
+</h3>
+			</div>
+		</section>
+
+
 
 	</main>
 	<footer>
 		
 	</footer>
-<br>
-<br>
-<br>
-<br>
-	<br>
-<br>
-<br>
-<br>
+
 	
 
 		<div class="button-subir-tela"><a href="#menu"><img src="img/em-cima.png"></a></div>
