terminando a sessão experiencia, atualizando as fontes dos textos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Matheus Sousa de Jesus</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kulim+Park&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
@@ -51,13 +52,24 @@
 			<div class="conteiner">
 				<img src="img/sobre.png">
 				<div class="sobre-principal-conteudo">
-					<h1 class="sobre-titulo">Sobre</h1>
-					<h3>	Lorem ipsum donec libero urna odio sem luctus proin conubia odio, purus ac ut vivamus donec condimentum inceptos scelerisque nunc primis, neque suspendisse etiam arcu ipsum in nullam auctor diam. ultricies egestas aliquet nam a lectus feugiat consectetur nunc molestie scelerisque, gravida curae pharetra vulputate rhoncus elit sagittis magna nisi, inceptos dictum id viverra et adipiscing litora duis egestas. maecenas nulla inceptos habitant purus porta imperdiet aliquet litora, conubia quisque mi sed senectus suscipit libero consequat consectetur, tellus mattis curabitur interdum phasellus mauris vulputate. neque blandit sollicitudin donec malesuada fringilla risus tellus, suspendisse praesent consectetur dapibus imperdiet molestie vehicula, aliquam purus aenean primis praesent scelerisque. 
+					<h1 class="principal-titulo">Sobre</h1>
+					<h3 class="conteudo-texto">	Lorem ipsum donec libero urna odio sem luctus proin conubia odio, purus ac ut vivamus donec condimentum inceptos scelerisque nunc primis, neque suspendisse etiam arcu ipsum in nullam auctor diam. ultricies egestas aliquet nam a lectus feugiat consectetur nunc molestie scelerisque, gravida curae pharetra vulputate rhoncus elit sagittis magna nisi, inceptos dictum id viverra et adipiscing litora duis egestas. maecenas nulla inceptos habitant purus porta imperdiet aliquet litora, conubia quisque mi sed senectus suscipit libero consequat consectetur, tellus mattis curabitur interdum phasellus mauris vulputate. neque blandit sollicitudin donec malesuada fringilla risus tellus, suspendisse praesent consectetur dapibus imperdiet molestie vehicula, aliquam purus aenean primis praesent scelerisque. 
 					</h3>
 				</div>
 			</div>
 		</section>
 
+		<section class="experiencia-principal">
+			<div class="conteiner">
+				<div class="experiencia-principal-conteudo">
+					<h1 class="principal-titulo">Experiência</h1>
+					<h3 class="conteudo-texto">	Lorem ipsum donec libero urna odio sem luctus proin conubia odio, purus ac ut vivamus donec condimentum inceptos scelerisque nunc primis, neque suspendisse etiam arcu ipsum in nullam auctor diam. ultricies egestas aliquet nam a lectus feugiat consectetur nunc molestie scelerisque, gravida curae pharetra vulputate rhoncus elit sagittis magna nisi, inceptos dictum id viverra et adipiscing litora duis egestas. maecenas nulla inceptos habitant purus porta imperdiet aliquet litora, conubia quisque mi sed senectus suscipit libero consequat consectetur, tellus mattis curabitur interdum phasellus mauris vulputate. neque blandit sollicitudin donec malesuada fringilla risus tellus, suspendisse praesent consectetur dapibus imperdiet molestie vehicula, aliquam purus aenean primis praesent scelerisque. 
+					</h3>
+					
+				</div>
+				<img src="img/experiencia.png">
+			</div>
+		</section>
 
 
 	</main>
