--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<section class="apresentacao">
 			<div class="conteiner">
 				<img src="img/foto-pessoal.jpg">
-				<h1 class="apresentacao-titulo">Olá, eu sou o Matheus</h1>
+				<h1 class="apresentacao-titulo"></h1>
 			</div>
 		</section>
 
@@ -109,5 +109,6 @@
 
 	<div class="button-subir-tela"><a href="#menu"><img src="img/em-cima.png"></a></div>
 
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
