Adicionando jquery no projeto

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
 	<div class="button-subir-tela"><a href="#menu"><img src="img/em-cima.png"></a></div>
 
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
