terminando a sessão contatos

--- a/index.html
+++ b/index.html
@@ -119,47 +119,74 @@
 				<div class="conteiner-formacao">
 					<div class="imagem-formacao"><img src="img/school.png"></div>
 					
-						<h2 class="titulo-formacao">Ensino Médio </h2>
-						<h3 class="data-conclusao">2015 - 2017</h3> 
+					<h2 class="titulo-formacao">Ensino Médio </h2>
+					<h3 class="data-conclusao">2015 - 2017</h3> 
 				</div>
-					<div class="conteiner-formacao" >
-						<div class="imagem-formacao"><img src="img/lab.png"></div>
-						<h2 class="titulo-formacao">Técnico em química</h2>
-						<h3 class="data-conclusao">2016 - 2017</h3> 
-					</div>
-					<div class="conteiner-formacao"
-					>
-						<div class="imagem-formacao"><img src="img/website.png"></div>
-						<h2 class="titulo-formacao">Técnico em desenvolvimento de sistemas</h2>
-						<h3 class="data-conclusao">2018 - 2019</h3> 
-					</div>
-					<div class="conteiner-formacao" >
-						<div class="imagem-formacao"><img src="img/gear.png"></div>
-						<h2 class="titulo-formacao">Tecnólogo em análise e desenvolvimento de sistemas</h2>
-						<h3 class="data-conclusao">2019 - 2021</h3> 
-					
-
-					</div>
+				<div class="conteiner-formacao" >
+					<div class="imagem-formacao"><img src="img/lab.png"></div>
+					<h2 class="titulo-formacao">Técnico em química</h2>
+					<h3 class="data-conclusao">2016 - 2017</h3> 
 				</div>
-			</section>
-			<section  id="section-contato">
-
-			</section>
-
-
-		</main>
-		<footer>
-
-		</footer>
-
-
-
-		<div class="button-subir-tela" id="btn-subir"><a href="#menu"><img src="img/em-cima.png"></a></div>
+				<div class="conteiner-formacao"
+				>
+				<div class="imagem-formacao"><img src="img/website.png"></div>
+				<h2 class="titulo-formacao">Técnico em desenvolvimento de sistemas</h2>
+				<h3 class="data-conclusao">2018 - 2019</h3> 
+			</div>
+			<div class="conteiner-formacao" >
+				<div class="imagem-formacao"><img src="img/gear.png"></div>
+				<h2 class="titulo-formacao">Tecnólogo em análise e desenvolvimento de sistemas</h2>
+				<h3 class="data-conclusao">2019 - 2021</h3> 
 
 
-		<script type="text/javascript" src="js/jquery.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>
-		<script type="text/javascript" src="js/conhecimentos.js"></script>
-	
-	</body>
-	</html>
+			</div>
+		</div>
+	</section>
+	<section class="contato-principal" id="section-contato">
+		<div class="conteiner">
+			<div class="informacoes-contatos">
+				<h1>Contatos</h1>
+				<div class="links">
+					<nav>
+						<img src="img/gmail.png">
+						<p>matheuss.jesus2017@gmail.com</p>
+					</nav>
+					<nav>
+						<img src="img/whatsapp.png">
+						<p>(11) 98373-3276</p>
+					</nav>
+					<nav>
+						<img src="img/linkedin.png">
+						<a href="https://www.linkedin.com/in/
+						matheus-sousa-de-jesus
+						" target="_black">					matheus-sousa-de-jesus
+					</a>
+				</nav>
+				<nav>
+					<img src="img/github-logo.png">
+					<a href="https://github.com/mytionbr" target="_black">mytionbr</a>
+				</nav>
+			</div>
+		</div>
+		<div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.4731974851206!2d-46.68364658501893!3d-23.730499484599093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4f6f474fc031%3A0x692fe11e81101d3a!2sRua%20Caiuby%20Alves%20de%20Castro%20-%20Jardim%20Guanhembu%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004814-630!5e0!3m2!1spt-BR!2sbr!4v1579185022933!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
+	</div>
+
+</section>
+
+
+</main>
+<footer>
+
+</footer>
+
+
+
+<div class="button-subir-tela" id="btn-subir"><a href="#menu"><img src="img/em-cima.png"></a></div>
+
+
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/conhecimentos.js"></script>
+
+</body>
+</html>
