--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<a href="#" id="formacoes">Formações</a>
 						</li>
 						<li>
-							<a href="#" id="contato">Contato</a>
+							<a href="#" id="contato">Contatos</a>
 						</li>
 					</ul>
 				</div>
