adicionando a section portfolio

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 							<a href="#" id="formacoes">Formações</a>
 						</li>
 						<li>
+							<a href="#" id="portfolio">Portfolio</a>
+						</li>
+						<li>
 							<a href="#" id="contato">Contatos</a>
 						</li>
 					</ul>
@@ -142,6 +145,33 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="portfolio" id="section-portfolio">
+		<div class="titulo-sessao-portfolio">Portfolio</div>
+		<div class="conteiner">
+			<img src="img/acap.png">
+			<div class="descricao-portfolio">
+				<h1>Acap</h1>
+				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+			</div>
+		</div>
+		<div class="conteiner">
+			
+			<div class="descricao-portfolio">
+				<h1>Acap</h1>
+				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+			</div>
+			<img src="img/acap.png">
+		</div>
+		<div class="conteiner">
+			<img src="img/acap.png">
+			<div class="descricao-portfolio">
+				<h1>Acap</h1>
+				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+			</div>
+		</div>
+	</section>
+
 	<section class="contato-principal" id="section-contato">
 		<div class="conteiner">
 			<div class="informacoes-contatos">
@@ -168,7 +198,7 @@
 				</nav>
 			</div>
 		</div>
-		<div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.4731974851206!2d-46.68364658501893!3d-23.730499484599093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4f6f474fc031%3A0x692fe11e81101d3a!2sRua%20Caiuby%20Alves%20de%20Castro%20-%20Jardim%20Guanhembu%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004814-630!5e0!3m2!1spt-BR!2sbr!4v1579185022933!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
+		<div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.4731974851206!2d-46.68364658501893!3d-23.730499484599093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4f6f474fc031%3A0x692fe11e81101d3a!2sRua%20Caiuby%20Alves%20de%20Castro%20-%20Jardim%20Guanhembu%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004814-630!5e0!3m2!1spt-BR!2sbr!4v1579185022933!5m2!1spt-BR!2sbr" width="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
 	</div>
 
 </section>
