Criando a sessão portfolio

--- a/index.html
+++ b/index.html
@@ -149,27 +149,69 @@
 	<section class="portfolio" id="section-portfolio">
 		<div class="titulo-sessao-portfolio">Portfolio</div>
 		<div class="conteiner">
-			<img src="img/acap.png">
-			<div class="descricao-portfolio">
-				<h1>Acap</h1>
-				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
-			</div>
+			<ul>
+				<li id="acap"><nav><img src="img/mais.png"><h1>Acap</h1></nav></li>
+				<div class="portfolio-decricao testInvisivel" id="acap-descricao">
+					<div class="flex">
+						<nav class="portfolio-img">
+							<img src="img/acap.png">
+							<img src="img/acap-dentro.jpg">
+						</nav>
+						<nav class="descricao-texto">
+							<h2>Acap Web</h2>
+							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+							<a href="https://github.com/mytionbr/acap-web" target="_black">Repositorio</a>
+						</nav>
+					</div>
+				</div>
+				<li id="alurinha"><nav><img src="img/mais.png"><h1>Alurinha</h1></nav></li>
+				<div class="portfolio-decricao testInvisivel" id="alurinha-descricao">
+					<div class="flex">
+						<nav class="portfolio-img">
+							<img src="img/acap.png">
+							<img src="img/acap-dentro.jpg">
+						</nav>
+						<nav class="descricao-texto">
+							<h2>Alurinha flexbox</h2>
+							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+							<a href="https://github.com/mytionbr/curso-flexbox.github.io" target="_black">Repositorio</a>
+						</nav>
+
+					</div>
+				</div>
+				<li id="calculadora-depreciacao"><nav><img src="img/mais.png"><h1>Calculadora de depreciação</h1></nav></li>
+				<div class="portfolio-decricao testInvisivel" id="calculadora-depreciacao-descricao">
+					<div class="flex">
+						<nav class="portfolio-img">
+							<img src="img/acap.png">
+							<img src="img/acap-dentro.jpg">
+						</nav>
+						<nav class="descricao-texto">
+							<h2>Calculadora de depreciação</h2>
+							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+							<a href="https://github.com/mytionbr/calculadora-de-depreciacao" target="_black">Repositorio</a>
+						</nav>
+
+					</div>
+				</div>
+				<li id="aparecida-nutricao"><nav><img src="img/mais.png"><h1>Aparecida nutrição</h1></nav></li>
+				<div class="portfolio-decricao testInvisivel" id="aparecida-nutricao-descricao">
+					<div class="flex">
+						<nav class="portfolio-img">
+							<img src="img/acap.png">
+							<img src="img/acap-dentro.jpg">
+						</nav>
+						<nav class="descricao-texto">
+							<h2>Aparecida nutrição</h2>
+							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+							<a href="https://github.com/mytionbr/aparecida-nutricao.github.io" target="_black">Repositorio</a>
+						</nav>
+
+					</div>
+				</div>
+			</ul>
 		</div>
-		<div class="conteiner">
-			
-			<div class="descricao-portfolio">
-				<h1>Acap</h1>
-				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
-			</div>
-			<img src="img/acap.png">
-		</div>
-		<div class="conteiner">
-			<img src="img/acap.png">
-			<div class="descricao-portfolio">
-				<h1>Acap</h1>
-				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
-			</div>
-		</div>
+		
 	</section>
 
 	<section class="contato-principal" id="section-contato">
@@ -198,8 +240,9 @@
 				</nav>
 			</div>
 		</div>
-		<div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.4731974851206!2d-46.68364658501893!3d-23.730499484599093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4f6f474fc031%3A0x692fe11e81101d3a!2sRua%20Caiuby%20Alves%20de%20Castro%20-%20Jardim%20Guanhembu%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004814-630!5e0!3m2!1spt-BR!2sbr!4v1579185022933!5m2!1spt-BR!2sbr" width="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
+		<div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14611.684864894909!2d-46.69886722478878!3d-23.714507303711255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4f0af1a04015%3A0x2af9aa8bb031b42b!2sPrimavera%20Interlagos!5e0!3m2!1spt-BR!2sbr!4v1581462418681!5m2!1spt-BR!2sbr" width="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
 	</div>
+
 
 </section>
 
@@ -208,15 +251,13 @@
 <footer>
 	<h1>Matheus.SJ</h1>
 </footer>
-
-
-
 <div class="button-subir-tela" id="btn-subir"><a href="#menu"><img src="img/em-cima.png"></a></div>
-
+<div class="loading"></div>
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/conhecimentos.js"></script>
+<script type="text/javascript" src="js/portfolio.js"></script>
 
 </body>
 </html>
