Adicionando imagens e links ao portfolio

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
 						<nav class="descricao-texto">
 							<h2>Acap Web</h2>
 							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-							<a href="https://github.com/mytionbr/acap-web" target="_black">Repositorio</a>
+							<a href="https://github.com/mytionbr/acap-web" target="_black">Repositório</a>
+							<a href="https://github.com/mytionbr/acap-web/releases" target="_black">Faça o download da ultima versão</a>
 						</nav>
 					</div>
 				</div>
@@ -168,13 +169,14 @@
 				<div class="portfolio-decricao testInvisivel" id="alurinha-descricao">
 					<div class="flex">
 						<nav class="portfolio-img">
-							<img src="img/acap.png">
-							<img src="img/acap-dentro.jpg">
+							<img src="img/alurinha.png">
+							<img src="img/alurinha2.png">
 						</nav>
 						<nav class="descricao-texto">
 							<h2>Alurinha flexbox</h2>
 							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-							<a href="https://github.com/mytionbr/curso-flexbox.github.io" target="_black">Repositorio</a>
+							<a href="https://github.com/mytionbr/curso-flexbox.github.io" target="_black">Repositório</a>
+							<a href="https://mytionbr.github.io/curso-flexbox.github.io/" target="_black">Visualizar projeto</a>
 						</nav>
 
 					</div>
@@ -183,13 +185,14 @@
 				<div class="portfolio-decricao testInvisivel" id="calculadora-depreciacao-descricao">
 					<div class="flex">
 						<nav class="portfolio-img">
-							<img src="img/acap.png">
-							<img src="img/acap-dentro.jpg">
+							<img src="img/calculadora.png">
+							<img src="img/calculadora2.png">
 						</nav>
 						<nav class="descricao-texto">
 							<h2>Calculadora de depreciação</h2>
 							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-							<a href="https://github.com/mytionbr/calculadora-de-depreciacao" target="_black">Repositorio</a>
+							<a href="https://github.com/mytionbr/calculadora-de-depreciacao" target="_black">Repositório</a>
+							<a href="https://mytionbr.github.io/calculadoradepreciacao.github.io/" target="_black">Visualizar projeto</a>
 						</nav>
 
 					</div>
@@ -198,13 +201,14 @@
 				<div class="portfolio-decricao testInvisivel" id="aparecida-nutricao-descricao">
 					<div class="flex">
 						<nav class="portfolio-img">
-							<img src="img/acap.png">
-							<img src="img/acap-dentro.jpg">
+							<img src="img/aparecida.png">
+							<img src="img/aparecida2.png">
 						</nav>
 						<nav class="descricao-texto">
 							<h2>Aparecida nutrição</h2>
 							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-							<a href="https://github.com/mytionbr/aparecida-nutricao.github.io" target="_black">Repositorio</a>
+							<a href="https://github.com/mytionbr/aparecida-nutricao.github.io" target="_black">Repositório</a>
+							<a href="https://mytionbr.github.io/aparecida-nutricao.github.io/" target="_black">Visualizar projeto</a>
 						</nav>
 
 					</div>
