adicionando a função loader

--- a/index.html
+++ b/index.html
@@ -256,12 +256,15 @@
 	<h1>Matheus.SJ</h1>
 </footer>
 <div class="button-subir-tela" id="btn-subir"><a href="#menu"><img src="img/em-cima.png"></a></div>
-<div class="loading"></div>
+<div id="loading">
+	<H1>Esperando a Página carregar.....</H1>
+</div>
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/conhecimentos.js"></script>
 <script type="text/javascript" src="js/portfolio.js"></script>
+<script type="text/javascript" src="js/loader.js"></script>
 
 </body>
 </html>
