adicionando novo conteúdo a sessão sobre

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				
 				<div class="sobre-principal-conteudo">
 					<h1 class="principal-titulo">Sobre</h1>
-					<h3 class="conteudo-texto">	Lorem ipsum donec libero urna odio sem luctus proin conubia odio, purus ac ut vivamus donec condimentum inceptos scelerisque nunc primis, neque suspendisse etiam arcu ipsum in nullam auctor diam. ultricies egestas aliquet nam a lectus feugiat consectetur nunc molestie scelerisque, gravida curae pharetra vulputate rhoncus elit sagittis magna nisi, inceptos dictum id viverra et adipiscing litora duis egestas. maecenas nulla inceptos habitant purus porta imperdiet aliquet litora, conubia quisque mi sed senectus suscipit libero consequat consectetur, tellus mattis curabitur interdum phasellus mauris vulputate. neque blandit sollicitudin donec malesuada fringilla risus tellus, suspendisse praesent consectetur dapibus imperdiet molestie vehicula, aliquam purus aenean primis praesent scelerisque. 
+					<h3 class="conteudo-texto">	Matheus Sousa de Jesus é um estudante de programação que atualmente cursa Análise e desenvolvimento de sistemas na Fatec Zona Sul. Como autodidata, ele sempre busca adquirir novos conhecimentos e melhorar as suas habilidades, praticando o que apreendeu em<a href="#" id="projetos">projetos pessoais</a>. O seu foco é no desenvolvimento web, tendo em mente que a experiência do consumidor é fundamental no desenvolvimento de aplicações. Além de estudante de programação, ele é um amante de jogos de estratégias, livros de ciência e filmes de ficção. 
 					</h3>
 				</div>
 			</div>
