--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kulim+Park&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Concert+One|Cormorant|Titillium+Web&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/conhecimentos.css">
+
 </head>
 <body>
 	<header>
